--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@lukemorales/query-key-factory": "^1.0.3",
-    "@project-chiral/unit-system": "^0.0.9",
+    "@project-chiral/unit-system": "latest",
     "@tanstack/vue-query": "^4.17.0",
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.204",
     "@tiptap/extension-placeholder": "^2.0.0-beta.203",
     "@tiptap/starter-kit": "^2.0.0-beta.202",
     "@tiptap/vue-3": "^2.0.0-beta.202",
+    "@vue-flow/additional-components": "^1.3.0",
     "@vue-flow/core": "^1.5.0",
     "@vueuse/core": "^9.5.0",
+    "axios": "^1.2.0",
     "motion": "^10.14.3",
     "pinia": "^2.0.24",
     "quasar": "^2.10.2",
@@ -43,12 +46,13 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.28.0",
     "eslint-plugin-vue": "^9.7.0",
+    "prisma-class-generator": "^0.2.4",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
     "unplugin-auto-import": "^0.11.5",
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
     "vite-plugin-vuetify": "^1.0.0",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.0.11"
   }
 }
