--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@lukemorales/query-key-factory": "^1.0.3",
-    "@project-chiral/unit-system": "latest",
+    "@project-chiral/unit-system": "1.0.0",
     "@tanstack/vue-query": "^4.17.0",
     "@tiptap/extension-bubble-menu": "^2.0.0-beta.204",
     "@tiptap/extension-placeholder": "^2.0.0-beta.203",
@@ -33,9 +33,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.31.0",
-    "@earltp/vue-virtual-scroller": "^1.0.1",
     "@iconify-json/radix-icons": "^1.1.6",
-    "@quasar/vite-plugin": "^1.2.3",
     "@types/node": "^18.11.9",
     "@typescript-eslint/parser": "^5.44.0",
     "@unocss/preset-attributify": "^0.46.5",
@@ -46,7 +44,6 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.28.0",
     "eslint-plugin-vue": "^9.7.0",
-    "prisma-class-generator": "^0.2.4",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
     "unplugin-auto-import": "^0.11.5",
