--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,9 @@
 {
-  "recommendations": ["Vue.volar"],
+  "recommendations": [
+    "vue.volar",
+    "vuetifyjs.vuetify-vscode",
+    "antfu.unocss",
+    "antfu.iconify",
+    "dbaeumer.vscode-eslint"
+  ],
 }
