--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@lukemorales/query-key-factory": "^1.0.3",
-    "@project-chiral/unit-system": "1.0.0",
-    "@tanstack/vue-query": "^4.17.0",
+    "@project-chiral/unit-system": "^1.0.5",
+    "@tanstack/vue-query": "^4.20.2",
     "@tiptap/extension-bubble-menu": "^2.0.0-beta.204",
     "@tiptap/extension-placeholder": "^2.0.0-beta.203",
     "@tiptap/starter-kit": "^2.0.0-beta.202",
@@ -23,11 +23,9 @@
     "axios": "^1.2.0",
     "motion": "^10.14.3",
     "pinia": "^2.0.24",
-    "quasar": "^2.10.2",
     "react-dnd-html5-backend": "^16.0.1",
     "vue": "^3.2.41",
     "vue-router": "4",
-    "vue-virtual-scroller": "^2.0.0-beta.3",
     "vue3-dnd": "^2.0.2",
     "vuetify": "^3.0.1"
   },
@@ -43,12 +41,15 @@
     "@unocss/reset": "^0.46.5",
     "@vitejs/plugin-vue": "^3.2.0",
     "eslint": "^8.28.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^9.7.0",
+    "mockjs": "^1.1.0",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
     "unplugin-auto-import": "^0.11.5",
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-vuetify": "^1.0.0",
     "vue-tsc": "^1.0.11"
   }
