--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ./src --fix"
   },
   "dependencies": {
+    "@arco-design/web-vue": "^2.40.0",
+    "@arco-themes/vue-project-chiral": "^0.0.2",
     "@lukemorales/query-key-factory": "^1.0.3",
     "@project-chiral/unit-system": "^1.0.5",
     "@tanstack/vue-query": "^4.20.2",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.31.0",
+    "@arco-plugins/vite-vue": "^1.4.2",
     "@iconify-json/radix-icons": "^1.1.6",
     "@types/node": "^18.11.9",
     "@typescript-eslint/parser": "^5.44.0",
@@ -43,6 +46,7 @@
     "eslint": "^8.28.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^9.7.0",
+    "less": "^4.1.3",
     "mockjs": "^1.1.0",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
