--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@arco-design/web-vue": "^2.40.0",
     "@arco-themes/vue-project-chiral": "^0.0.2",
     "@lukemorales/query-key-factory": "^1.0.3",
+    "@motionone/vue": "^10.15.3",
     "@project-chiral/unit-system": "^1.0.5",
     "@tanstack/vue-query": "^4.20.2",
     "@tiptap/extension-bubble-menu": "^2.0.0-beta.204",
@@ -21,7 +22,8 @@
     "@tiptap/vue-3": "^2.0.0-beta.202",
     "@vue-flow/additional-components": "^1.3.0",
     "@vue-flow/core": "^1.5.0",
-    "@vueuse/core": "^9.5.0",
+    "@vueuse/core": "^9.8.2",
+    "@vueuse/shared": "^9.8.2",
     "axios": "^1.2.0",
     "motion": "^10.14.3",
     "pinia": "^2.0.24",
@@ -35,26 +37,36 @@
     "@antfu/eslint-config": "^0.31.0",
     "@arco-plugins/vite-vue": "^1.4.2",
     "@iconify-json/radix-icons": "^1.1.6",
+    "@types/css": "^0.0.33",
     "@types/node": "^18.11.9",
     "@typescript-eslint/parser": "^5.44.0",
     "@unocss/preset-attributify": "^0.46.5",
     "@unocss/preset-icons": "^0.46.5",
     "@unocss/preset-rem-to-px": "^0.46.5",
     "@unocss/preset-typography": "^0.46.5",
+    "@unocss/preset-uno": "^0.48.0",
     "@unocss/reset": "^0.46.5",
     "@vitejs/plugin-vue": "^3.2.0",
+    "css": "^3.0.0",
     "eslint": "^8.28.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^9.7.0",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
+    "unocss-preset-theme": "^0.2.0",
     "unplugin-auto-import": "^0.11.5",
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-vuetify": "^1.0.0",
     "vue-tsc": "^1.0.11"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "unocss-preset-theme@0.2.0": "patches/unocss-preset-theme@0.2.0.patch"
+    }
   }
 }
