--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "init": "pnpm i --frozen-lockfile",
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint ./src --fix"
   },
+  "packageManager": "pnpm@7.19.0",
   "dependencies": {
     "@arco-design/web-vue": "^2.40.0",
     "@arco-themes/vue-project-chiral": "^0.0.2",
@@ -56,17 +58,12 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.6.4",
     "unocss": "^0.46.5",
-    "unocss-preset-theme": "^0.2.0",
+    "unocss-preset-theme": "^0.3.0",
     "unplugin-auto-import": "^0.11.5",
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-vuetify": "^1.0.0",
     "vue-tsc": "^1.0.11"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "unocss-preset-theme@0.2.0": "patches/unocss-preset-theme@0.2.0.patch"
-    }
   }
 }
