--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     "axios": "^1.2.0",
     "motion": "^10.14.3",
     "pinia": "^2.0.24",
+    "prosemirror-commands": "^1.5.0",
+    "prosemirror-dropcursor": "^1.6.1",
+    "prosemirror-gapcursor": "^1.3.1",
+    "prosemirror-history": "^1.3.0",
+    "prosemirror-keymap": "^1.2.0",
+    "prosemirror-schema-list": "^1.2.2",
     "react-dnd-html5-backend": "^16.0.1",
     "vue": "^3.2.41",
     "vue-router": "4",
