增加workspace错误处理

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-# VITE_BASE_URL=https://api.wozluohd.xyz:4000
-
-VITE_BASE_URL=http://localhost:5173/api
+VITE_BASE_URL=https://api.wozluohd.xyz:4000
+# VITE_BASE_URL=http://localhost:5173/api
