--- a/package.json
+++ b/package.json
@@ -4,32 +4,33 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "init": "pnpm i --frozen-lockfile",
-    "dev": "vite",
+    "update-api": "source update-api.sh",
+    "dev": "pnpm update-api && vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint ./src --fix",
-    "update": "source update-api.sh"
+    "lint": "eslint ./src --fix"
   },
   "packageManager": "pnpm@7.19.0",
   "dependencies": {
-    "@arco-design/web-vue": "^2.40.0",
+    "@arco-design/web-vue": "^2.40.1",
     "@arco-themes/vue-project-chiral": "^0.0.2",
     "@lukemorales/query-key-factory": "^1.0.3",
     "@motionone/vue": "^10.15.3",
     "@project-chiral/unit-system": "^1.0.5",
-    "@tanstack/vue-query": "^4.20.2",
-    "@tiptap/extension-bubble-menu": "^2.0.0-beta.204",
-    "@tiptap/extension-placeholder": "^2.0.0-beta.203",
-    "@tiptap/starter-kit": "^2.0.0-beta.202",
-    "@tiptap/vue-3": "^2.0.0-beta.202",
-    "@vue-flow/additional-components": "^1.3.0",
-    "@vue-flow/core": "^1.5.0",
-    "@vueuse/core": "^9.8.2",
-    "@vueuse/shared": "^9.8.2",
-    "axios": "^1.2.0",
-    "motion": "^10.14.3",
-    "pinia": "^2.0.24",
+    "@tanstack/vue-query": "^4.20.5",
+    "@tiptap/extension-bubble-menu": "2.0.0-beta.209",
+    "@tiptap/extension-placeholder": "2.0.0-beta.209",
+    "@tiptap/starter-kit": "2.0.0-beta.209",
+    "@tiptap/vue-3": "2.0.0-beta.209",
+    "@types/d3-force": "^3.0.3",
+    "@vue-flow/additional-components": "^1.3.3",
+    "@vue-flow/core": "^1.9.1",
+    "@vueuse/core": "^9.9.0",
+    "@vueuse/shared": "^9.9.0",
+    "axios": "^1.2.1",
+    "d3-force": "^3.0.0",
+    "motion": "^10.15.3",
+    "pinia": "^2.0.28",
     "prosemirror-commands": "^1.5.0",
     "prosemirror-dropcursor": "^1.6.1",
     "prosemirror-gapcursor": "^1.3.1",
@@ -37,18 +38,18 @@
     "prosemirror-keymap": "^1.2.0",
     "prosemirror-schema-list": "^1.2.2",
     "react-dnd-html5-backend": "^16.0.1",
-    "vue": "^3.2.41",
-    "vue-router": "4",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
     "vue3-dnd": "^2.0.2",
-    "vuetify": "^3.0.1"
+    "vuetify": "^3.0.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.31.0",
+    "@antfu/eslint-config": "^0.31.1",
     "@arco-plugins/vite-vue": "^1.4.2",
     "@iconify-json/radix-icons": "^1.1.6",
     "@types/css": "^0.0.33",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@types/node": "^18.11.18",
+    "@typescript-eslint/parser": "^5.47.1",
     "@unocss/preset-attributify": "^0.46.5",
     "@unocss/preset-icons": "^0.46.5",
     "@unocss/preset-rem-to-px": "^0.46.5",
@@ -57,20 +58,20 @@
     "@unocss/reset": "^0.46.5",
     "@vitejs/plugin-vue": "^3.2.0",
     "css": "^3.0.0",
-    "eslint": "^8.28.0",
+    "eslint": "^8.30.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-plugin-vue": "^9.7.0",
+    "eslint-plugin-vue": "^9.8.0",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.4",
+    "typescript": "^4.9.4",
     "unocss": "^0.46.5",
     "unocss-preset-theme": "^0.3.0",
     "unplugin-auto-import": "^0.11.5",
-    "unplugin-vue-components": "^0.22.11",
-    "vite": "^3.2.3",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^3.2.5",
     "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-vuetify": "^1.0.0",
-    "vue-tsc": "^1.0.11"
+    "vite-plugin-vuetify": "^1.0.1",
+    "vue-tsc": "^1.0.18"
   }
 }
