--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "unocss": "^0.46.5",
+    "unocss-preset-scrollbar": "^0.2.1",
     "unocss-preset-theme": "^0.3.0",
     "unplugin-auto-import": "^0.11.5",
     "unplugin-vue-components": "^0.22.12",
