--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@unocss/preset-uno": "^0.48.0",
     "@unocss/reset": "^0.46.5",
     "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/runtime-core": "^3.2.45",
     "css": "^3.0.0",
     "eslint": "^8.31.0",
     "eslint-plugin-unused-imports": "^2.0.0",
@@ -73,6 +74,6 @@
     "vite": "^3.2.5",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-vuetify": "^1.0.1",
-    "vue-tsc": "^1.0.19"
+    "vue-tsc": "^1.0.20"
   }
 }
