--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@arco-themes/vue-project-chiral": "^0.0.2",
     "@lukemorales/query-key-factory": "^1.0.3",
     "@motionone/vue": "^10.15.3",
-    "@project-chiral/unit-system": "^1.0.5",
+    "@project-chiral/unit-system": "latest",
     "@tanstack/vue-query": "^4.20.5",
     "@tiptap/extension-bubble-menu": "2.0.0-beta.209",
     "@tiptap/extension-placeholder": "2.0.0-beta.209",
@@ -29,6 +29,7 @@
     "@vueuse/shared": "^9.9.0",
     "axios": "^1.2.1",
     "d3-force": "^3.0.0",
+    "lru_map": "^0.4.1",
     "motion": "^10.15.3",
     "pinia": "^2.0.28",
     "prosemirror-commands": "^1.5.0",
