--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "packageManager": "pnpm@7.19.0",
   "dependencies": {
-    "@arco-design/web-vue": "^2.41.0",
+    "@arco-design/web-vue": "^2.41.1",
     "@arco-themes/vue-project-chiral": "^0.0.2",
     "@lukemorales/query-key-factory": "^1.0.3",
     "@motionone/vue": "^10.15.3",
-    "@project-chiral/unit-system": "latest",
+    "@project-chiral/unit-id": "^0.1.0",
     "@tanstack/vue-query": "^4.20.5",
     "@tiptap/extension-bubble-menu": "2.0.0-beta.209",
     "@tiptap/extension-placeholder": "2.0.0-beta.209",
