--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.2.1",
     "d3-force": "^3.0.0",
     "lru_map": "^0.4.1",
+    "mitt": "^3.0.0",
     "motion": "^10.15.3",
     "pinia": "^2.0.28",
     "prosemirror-commands": "^1.5.0",
