--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@project-chiral/unit-id": "^0.1.1",
     "@tanstack/vue-query": "^4.20.5",
     "@tiptap/extension-bubble-menu": "2.0.0-beta.209",
+    "@tiptap/extension-character-count": "2.0.0-beta.209",
+    "@tiptap/extension-mention": "2.0.0-beta.209",
     "@tiptap/extension-placeholder": "2.0.0-beta.209",
     "@tiptap/starter-kit": "2.0.0-beta.209",
+    "@tiptap/suggestion": "2.0.0-beta.209",
     "@tiptap/vue-3": "2.0.0-beta.209",
     "@types/d3-force": "^3.0.4",
     "@vue-flow/additional-components": "^1.3.3",
