--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prosemirror-keymap": "^1.2.0",
     "prosemirror-schema-list": "^1.2.2",
     "react-dnd-html5-backend": "^16.0.1",
+    "tippy.js": "^6.3.7",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vue3-dnd": "^2.0.2",
