--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@arco-design/web-vue": "^2.41.1",
     "@arco-themes/vue-project-chiral": "^0.0.2",
+    "@iconify-json/mdi": "^1.1.45",
+    "@iconify-json/radix-icons": "^1.1.8",
     "@lukemorales/query-key-factory": "^1.0.3",
     "@motionone/vue": "^10.15.3",
     "@project-chiral/unit-id": "^0.1.1",
@@ -52,7 +54,6 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.31.1",
     "@arco-plugins/vite-vue": "^1.4.2",
-    "@iconify-json/radix-icons": "^1.1.8",
     "@types/css": "^0.0.33",
     "@types/node": "^18.11.18",
     "@typescript-eslint/parser": "^5.48.0",
