--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@unocss/preset-typography": "^0.46.5",
     "@unocss/preset-uno": "^0.49.4",
     "@unocss/reset": "^0.46.5",
+    "@unocss/transformer-variant-group": "^0.49.4",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/runtime-core": "^3.2.47",
     "css": "^3.0.0",
