--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@arco-themes/vue-project-chiral": "^0.0.2",
     "@iconify-json/mdi": "^1.1.45",
     "@iconify-json/radix-icons": "^1.1.8",
-    "@lukemorales/query-key-factory": "^1.1.0",
     "@motionone/vue": "^10.15.5",
     "@project-chiral/unit-id": "^0.1.1",
     "@tanstack/vue-query": "^4.24.4",
@@ -26,14 +25,12 @@
     "@tiptap/starter-kit": "2.0.0-beta.209",
     "@tiptap/suggestion": "2.0.0-beta.209",
     "@tiptap/vue-3": "2.0.0-beta.209",
-    "@types/d3-force": "^3.0.4",
     "@vue-flow/additional-components": "^1.3.3",
     "@vue-flow/core": "^1.13.2",
     "@vueuse/core": "^9.12.0",
     "@vueuse/shared": "^9.12.0",
     "axios": "^1.2.1",
     "d3-force": "^3.0.0",
-    "lru_map": "^0.4.1",
     "mitt": "^3.0.0",
     "motion": "^10.15.5",
     "pinia": "^2.0.30",
@@ -47,13 +44,13 @@
     "tippy.js": "^6.3.7",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vue3-dnd": "^2.0.2",
-    "vuetify": "^3.1.3"
+    "vue3-dnd": "^2.0.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.31.1",
     "@arco-plugins/vite-vue": "^1.4.2",
     "@types/css": "^0.0.33",
+    "@types/d3-force": "^3.0.4",
     "@types/node": "^18.11.18",
     "@typescript-eslint/parser": "^5.50.0",
     "@unocss/preset-attributify": "^0.46.5",
