增加文件上传相关

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.2.1",
     "d3-force": "^3.0.0",
     "dayjs": "^1.11.7",
+    "js-sha512": "^0.8.0",
     "mitt": "^3.0.0",
     "motion": "^10.15.5",
     "object-hash": "^3.0.0",
