--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/vue-query": "^4.24.4",
     "@tiptap/extension-bubble-menu": "2.0.0-beta.209",
     "@tiptap/extension-character-count": "2.0.0-beta.209",
+    "@tiptap/extension-document": "2.0.0-beta.220",
     "@tiptap/extension-mention": "2.0.0-beta.209",
     "@tiptap/extension-placeholder": "2.0.0-beta.209",
     "@tiptap/starter-kit": "2.0.0-beta.209",
