--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "pnpm update-api && vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint ./src --fix"
+    "lint": "eslint \"src/**/*.{ts,vue}\" --fix"
   },
   "dependencies": {
     "@arco-design/web-vue": "^2.42.1",
