--- a/package.json
+++ b/package.json
@@ -70,10 +70,12 @@
     "@vue/runtime-core": "^3.2.47",
     "css": "^3.0.0",
     "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^9.9.0",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
+    "prettier": "^2.8.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "unocss": "^0.49.1",
